# alpha-q

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.claude/: settings.local.json
.claude/hooks/: things3-sync.sh
.github/workflows/: ci.yml
configs/: default.yaml
configs/agents/: c51.yaml  double_dqn.yaml  dqn.yaml  dueling_dqn.yaml  noisy_dqn.yaml  rainbow.yaml
configs/envs/: breakout.yaml  pong.yaml
experiments/: README.md
scripts/: play.py  record.py  train.py
src/alpha_q/: __init__.py
src/alpha_q/agents/: __init__.py  base.py  c51.py  double_dqn.py  dqn.py  dueling_dqn.py  noisy_dqn.py  rainbow.py
src/alpha_q/envs/: atari.py
src/alpha_q/memory/: n_step_buffer.py  prioritized_replay_buffer.py  replay_buffer.py  sum_tree.py
src/alpha_q/networks/: categorical_cnn.py  cnn.py  dueling_cnn.py  noisy_cnn.py  noisy_linear.py  rainbow_cnn.py
src/alpha_q/training/: evaluator.py  trainer.py
src/alpha_q/utils/: config.py  logging.py  seeding.py
tests/: conftest.py  test_c51_agent.py  test_config.py  test_double_dqn_agent.py  test_dqn_agent.py  test_dueling_dqn_agent.py  test_env.py  test_n_step_buffer.py  test_noisy_dqn_agent.py  test_prioritized_replay_buffer.py  test_rainbow_agent.py  test_replay_buffer.py  test_sum_tree.py
